--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
 
@@ -83,7 +81,7 @@
 							</header>
 							<p> </p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="https://tianxiao.pb.gallery/bakery" class="button alt">Learn More</a></li>
 							</ul>
 						</div>
 					
